--- a/hero.html
+++ b/hero.html
@@ -41,6 +41,12 @@
 
         <ul class=" list-container project-bg" id="listContainer">
 
+            <div id ="no-data" style="display:flex ; justify-content: center;">
+                <div style="margin-top:1.5%; width:95%;" class= "aven-details">
+                    <h6 style="margin-left:2%">No data found</h6>
+                </div>
+            </div>
+
         </ul>
 
         <script src = './hero_script.js'></script>
