--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Marvel Home</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="./style.css">
     </head>
@@ -50,7 +51,7 @@
                   <img class="card-img-top" src="https://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg" alt="Card image cap" height="70%">
                   <div class="card-body project-bg" style="text-align: center;">
                     <h1>3-D Man</h1>
-                    <a href="#" class="card-text"><h1>Checkout</h1></a>
+                    
                   </div>
                 </div>
               </div>
@@ -60,9 +61,9 @@
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
+            <a class="carousel-control-next"  href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" style="width:10% ;" aria-hidden="true"></span>
+              <span class="sr-only" style="width:10% ;" >Next</span>
             </a>
           </div>
 
@@ -91,6 +92,23 @@
               </div>
             </li>
             -->
+
+
+            <li class="list-group-item project-bg" id="no-results">
+              <div class="aven-list-item">
+                <div style="margin-top: 1.5%; width:100%; text-align: center;">
+                  <h2>No Data found for search results</h2>
+                </div>
+              </div>
+            </li>
+
+            <li class="list-group-item project-bg" id="no-fav">
+              <div class="aven-list-item">
+                <div style="margin-top: 1.5%; width:100%; text-align: center;">
+                  <h2>No favourites added</h2>
+                </div>
+              </div>
+            </li>
             
 
 
